name:               halcyon-recursive-example
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable halcyon-recursive-example
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base
  build-tools:        c2hs
